# LingDong

./: .gitignore  MODULE.bazel  README.md  WORKSPACE  requirements.txt  run_node.sh
modules/agent/: BUILD
modules/agent/skills/: agent_node.py  visual_skill.py
modules/audio/: BUILD  audio.py  audio_node.py
modules/brain/vlm/: vlm_service.py
modules/hardware/: BUILD  active_feedback_node.py
src/lingdong_msgs/: AudioResult.proto  BUILD  CMakeLists.txt  package.xml
src/lingdong_msgs/msg/: AudioResult.msg
src/lingdong_msgs/proto/: AudioResult.proto
